--- a/index.html
+++ b/index.html
@@ -27,18 +27,58 @@
                     <div class="row">
                         <div class="col-4">
                             <span class="text_grey">
-                            მთავარი >
+                                მთავარი >
                             </span>
                         </div>
                         <div class="col-3">
                             <span class="text_grey">
-                            ძიება >
+                                ძიება >
                             </span>
                         </div>
                         <div class="col-3">
                             <span class="text_orange">
-                            იყიდება >
+                                იყიდება >
                             </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <div class="filter_box">
+
+                    </div>
+                </div>
+                <div class="col-8">
+                    <div class="car_filter">
+                        <div class="row justify_space_between">
+                            <div class="col-3">
+                                 <p>
+                                    176047 განცხადება
+                                 </p>
+                            </div>
+                            <div class="col-4">
+                                <div class="row">
+                                    <div class="col-6">
+                                          <select name="time" id="time">
+                                            <option value="ბოლო1 საათი">ბოლო 1 საათი</option>
+                                            <option value="ბოლო 3 საათი">ბოლო 3 საათი</option>
+                                            <option value="ბოლო 6 საათი">ბოლო 6 საათი</option>
+                                            <option value="ბოლო 12 საათი">ბოლო 12 საათი</option>
+                                            </select>
+                                    </div>
+                                    <div class="col-6">
+                                          <select name="time" id="time">
+                                            <option value="თარიღი კლებადი">თარიღი კლებადი</option>
+                                            <option value="თარიღი ზრდადი">თარიღი ზრდადი</option>
+                                            <option value="ფასი კლებადი">ფასი კლებადი</option>
+                                            <option value="ფასი ზრდადი">ფასი ზრდადი</option>
+                                            <option value="გარბენი კლებადი">გარბენი კლებადი</option>
+                                            <option value="გარბენი ზრდადი">გარბენი ზრდადი</option>
+                                           </select>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
