--- a/index.html
+++ b/index.html
@@ -43,10 +43,84 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row mt_23">
                 <div class="col-4">
                     <div class="filter_box">
-
+                         <div class="filter_box_header">
+                            <div class="row">
+                                <div class="col-4 d_flex justify_content_center active">
+                                    <div class="tab_container">
+                                        <div class="icon_box">
+                                            <img src="src/img/car.svg" alt="car logo">
+                                        </div>
+                                    </div>                                    
+                                </div>
+                                <div class="col-4 d_flex justify_content_center bg_gray">
+                                    <div class="tab_container">
+                                        <div class="icon_box">
+                                            <img src="src/img/t.svg" alt="T">
+                                      </div>
+                                    </div>                                    
+                                </div>
+                                <div class="col-4 d_flex justify_content_center bg_gray radius_b">
+                                    <div class="tab_container">
+                                        <div class="icon_box">
+                                            <img src="src/img/bike.svg" alt="bike">
+                                       </div>
+                                    </div>                                
+                                </div> 
+                            </div>
+                         </div>
+                         <div class="filter_box_body">
+                            <label>გარიგების ტიპი</label>
+                            <select class="select" name="deal_type" id="deal_type">
+                                <option value="იყიდება">იყიდება</option>
+                                <option value="ქირავდება">ქირავდება</option>
+                                </select>
+                                <label>მწარმოებელი</label>
+                            <select class="select" name="producer" id="producer">
+                                <option value="ყველა მწარმოებელი">ყველა მწარმოებელი</option>
+                                <option value="BMW">BMW</option>
+                                <option value="Mercedes-benz">Mercedes-benz</option>
+                                <option value="Audi">Audi</option>
+                                </select>
+                                <label>კატეგორია</label>
+                            <select class="select" name="category" id="category">
+                                <option value="ყველა კატეგორია">ყველა კატეგორია</option>
+                                <option value="სედანი">სედანი</option>
+                                <option value="ჯიპი">ჯიპი</option>
+                                <option value="კუპე">კუპე</option>
+                                </select>
+                         </div>
+                         <hr>
+                         <div class="filter_box_body">
+                            <div class="row justify_space_between">
+                                <div class="col-2">
+                                    ფასი
+                                </div>
+                                <div class="col-2">
+                                    ნიშანი
+                                </div>
+                            </div>
+                         </div>
+                         <div class="filter_box_body">
+                            <div class="row justify_space_between">
+                                <div class="col-5">
+                                    <input class="form_control input_text" type="text" placeholder="დან"> 
+                                </div>
+                                <div>
+                                     <p>_</p>
+                                </div>
+                                <div class="col-5">
+                                    <input class="form_control input_text" type="text" placeholder="მდე">
+                                </div>
+                            </div>
+                         </div>
+                         <div class="filter_box_footer">
+                              <button class="search_button">
+                                ძებნა 197,963
+                              </button>   
+                         </div>
                     </div>
                 </div>
                 <div class="col-8">
