--- a/index.html
+++ b/index.html
@@ -154,6 +154,100 @@
                                 </div>
                             </div>
                         </div>
+                     <div class="card">
+                        <div class="row">
+                            <div class="col-3">
+                                <img src="src/img/car_sale.png" class="img"  alt="sale car">
+                            </div>
+                            <div class="col-9">
+                                <div class="description_container">
+                                    <div class="row">
+                                        <div class="col-7">
+                                            <div class="car_name_container">
+                                                <p class="car_name">LAND ROVER Range Rover Evoque <span class="car_year">2013 წ</span></p>
+                                            </div>
+                                        </div>
+                                        <div class="col-5">
+                                            <div class="row">
+                                                <div class="col-6">
+                                                    <p class="car_ganbajeba">განბაჟება 2,176 ₾</p>
+                                                </div>
+                                                <div class="col-6">
+                                                    <div class="row">
+                                                        <div class="col-2">
+                                                            <div class="flag_container">
+                                                                <img src="src/img/flag_geo.svg" alt="flag_geo">
+                                                            </div>                                                            
+                                                        </div>
+                                                        <div class="col-6">
+                                                            <span class="car_year">გზაშია</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                 <div class="col-7">
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <div class="row">
+                                                <div class="col-12 d_flex">
+                                                    <div class="icon_container">
+                                                        <img src="src/img/hybrid.svg" alt="hybrid">
+                                                    </div>
+                                                     <p class="description">
+                                                        1.8 დატ. ჰიბრიდი
+                                                     </p>
+                                                </div>
+                                                <div class="col-12 d_flex">
+                                                    <div class="icon_container">
+                                                        <img src="src/img/km.svg" alt="hybrid">
+                                                    </div>
+                                                     <p class="description">
+                                                        200 000 კმ
+                                                     </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <div class="row">
+                                                <div class="col-12 d_flex">
+                                                    <div class="icon_container">
+                                                        <img src="src/img/automatic.svg" alt="hybrid">
+                                                    </div>
+                                                     <p class="description">
+                                                        ავტომატიკა
+                                                     </p>
+                                                </div>
+                                                <div class="col-12 d_flex">
+                                                    <div class="icon_container">
+                                                        <img src="src/img/s_wheel.svg" alt="hybrid">
+                                                    </div>
+                                                     <p class="description">
+                                                        მარჯვენა
+                                                     </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                 </div>
+                                 <div class="col-5 d_flex justify_content_end">
+                                    <h2 class="value">
+                                        69,507
+                                        <span class="gel">
+                                        ₾
+                                        </span>
+
+                                    </h2>
+                                 </div>
+                                </div>
+                            </div>
+                        </div>
+                     </div>
                     </div>
                 </div>
             </div>
