--- a/index.html
+++ b/index.html
@@ -46,54 +46,54 @@
             <div class="row mt_23">
                 <div class="col-4">
                     <div class="filter_box">
-                         <div class="filter_box_header">
+                        <div class="filter_box_header">
                             <div class="row">
                                 <div class="col-4 d_flex justify_content_center active">
                                     <div class="tab_container">
                                         <div class="icon_box">
                                             <img src="src/img/car.svg" alt="car logo">
                                         </div>
-                                    </div>                                    
+                                    </div>
                                 </div>
                                 <div class="col-4 d_flex justify_content_center bg_gray">
                                     <div class="tab_container">
                                         <div class="icon_box">
                                             <img src="src/img/t.svg" alt="T">
-                                      </div>
-                                    </div>                                    
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="col-4 d_flex justify_content_center bg_gray radius_b">
                                     <div class="tab_container">
                                         <div class="icon_box">
                                             <img src="src/img/bike.svg" alt="bike">
-                                       </div>
-                                    </div>                                
-                                </div> 
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                         </div>
-                         <div class="filter_box_body">
+                        </div>
+                        <div class="filter_box_body">
                             <label>გარიგების ტიპი</label>
                             <select class="select" name="deal_type" id="deal_type">
                                 <option value="იყიდება">იყიდება</option>
                                 <option value="ქირავდება">ქირავდება</option>
-                                </select>
-                                <label>მწარმოებელი</label>
+                            </select>
+                            <label>მწარმოებელი</label>
                             <select class="select" name="producer" id="producer">
                                 <option value="ყველა მწარმოებელი">ყველა მწარმოებელი</option>
                                 <option value="BMW">BMW</option>
                                 <option value="Mercedes-benz">Mercedes-benz</option>
                                 <option value="Audi">Audi</option>
-                                </select>
-                                <label>კატეგორია</label>
+                            </select>
+                            <label>კატეგორია</label>
                             <select class="select" name="category" id="category">
                                 <option value="ყველა კატეგორია">ყველა კატეგორია</option>
                                 <option value="სედანი">სედანი</option>
                                 <option value="ჯიპი">ჯიპი</option>
                                 <option value="კუპე">კუპე</option>
-                                </select>
-                         </div>
-                         <hr>
-                         <div class="filter_box_body">
+                            </select>
+                        </div>
+                        <hr>
+                        <div class="filter_box_body">
                             <div class="row justify_space_between">
                                 <div class="col-2">
                                     ფასი
@@ -102,152 +102,153 @@
                                     ნიშანი
                                 </div>
                             </div>
-                         </div>
-                         <div class="filter_box_body">
+                        </div>
+                        <div class="filter_box_body">
                             <div class="row justify_space_between">
                                 <div class="col-5">
-                                    <input class="form_control input_text" type="text" placeholder="დან"> 
+                                    <input class="form_control input_text" type="text" placeholder="დან">
                                 </div>
                                 <div>
-                                     <p>_</p>
+                                    <p>_</p>
                                 </div>
                                 <div class="col-5">
                                     <input class="form_control input_text" type="text" placeholder="მდე">
                                 </div>
                             </div>
-                         </div>
-                         <div class="filter_box_footer">
-                              <button class="search_button">
+                        </div>
+                        <div class="filter_box_footer">
+                            <button class="search_button">
                                 ძებნა 197,963
-                              </button>   
-                         </div>
+                            </button>
+                        </div>
                     </div>
                 </div>
                 <div class="col-8">
                     <div class="car_filter">
                         <div class="row justify_space_between">
                             <div class="col-3">
-                                 <p>
+                                <p>
                                     176047 განცხადება
-                                 </p>
+                                </p>
                             </div>
                             <div class="col-4">
                                 <div class="row">
                                     <div class="col-6">
-                                          <select name="time" id="time">
+                                        <select name="time" id="time">
                                             <option value="ბოლო1 საათი">ბოლო 1 საათი</option>
                                             <option value="ბოლო 3 საათი">ბოლო 3 საათი</option>
                                             <option value="ბოლო 6 საათი">ბოლო 6 საათი</option>
                                             <option value="ბოლო 12 საათი">ბოლო 12 საათი</option>
-                                            </select>
+                                        </select>
                                     </div>
                                     <div class="col-6">
-                                          <select name="time" id="time">
+                                        <select name="time" id="time">
                                             <option value="თარიღი კლებადი">თარიღი კლებადი</option>
                                             <option value="თარიღი ზრდადი">თარიღი ზრდადი</option>
                                             <option value="ფასი კლებადი">ფასი კლებადი</option>
                                             <option value="ფასი ზრდადი">ფასი ზრდადი</option>
                                             <option value="გარბენი კლებადი">გარბენი კლებადი</option>
                                             <option value="გარბენი ზრდადი">გარბენი ზრდადი</option>
-                                           </select>
+                                        </select>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                     <div class="card">
-                        <div class="row">
-                            <div class="col-3">
-                                <img src="src/img/car_sale.png" class="img"  alt="sale car">
-                            </div>
-                            <div class="col-9">
-                                <div class="description_container">
+                        <div class="card">
+                            <div class="row">
+                                <div class="col-3">
+                                    <img src="src/img/car_sale.png" class="img" alt="sale car">
+                                </div>
+                                <div class="col-9">
+                                    <div class="description_container">
+                                        <div class="row">
+                                            <div class="col-7">
+                                                <div class="car_name_container">
+                                                    <p class="car_name">LAND ROVER Range Rover Evoque <span
+                                                            class="car_year">2013 წ</span></p>
+                                                </div>
+                                            </div>
+                                            <div class="col-5">
+                                                <div class="row">
+                                                    <div class="col-6">
+                                                        <p class="car_ganbajeba">განბაჟება 2,176 ₾</p>
+                                                    </div>
+                                                    <div class="col-6">
+                                                        <div class="row">
+                                                            <div class="col-2">
+                                                                <div class="flag_container">
+                                                                    <img src="src/img/flag_geo.svg" alt="flag_geo">
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-6">
+                                                                <span class="car_year">გზაშია</span>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                     <div class="row">
                                         <div class="col-7">
-                                            <div class="car_name_container">
-                                                <p class="car_name">LAND ROVER Range Rover Evoque <span class="car_year">2013 წ</span></p>
-                                            </div>
-                                        </div>
-                                        <div class="col-5">
                                             <div class="row">
-                                                <div class="col-6">
-                                                    <p class="car_ganbajeba">განბაჟება 2,176 ₾</p>
-                                                </div>
                                                 <div class="col-6">
                                                     <div class="row">
-                                                        <div class="col-2">
-                                                            <div class="flag_container">
-                                                                <img src="src/img/flag_geo.svg" alt="flag_geo">
-                                                            </div>                                                            
+                                                        <div class="col-12 d_flex">
+                                                            <div class="icon_container">
+                                                                <img src="src/img/hybrid.svg" alt="hybrid">
+                                                            </div>
+                                                            <p class="description">
+                                                                1.8 დატ. ჰიბრიდი
+                                                            </p>
                                                         </div>
-                                                        <div class="col-6">
-                                                            <span class="car_year">გზაშია</span>
+                                                        <div class="col-12 d_flex">
+                                                            <div class="icon_container">
+                                                                <img src="src/img/km.svg" alt="hybrid">
+                                                            </div>
+                                                            <p class="description">
+                                                                200 000 კმ
+                                                            </p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-6">
+                                                    <div class="row">
+                                                        <div class="col-12 d_flex">
+                                                            <div class="icon_container">
+                                                                <img src="src/img/automatic.svg" alt="hybrid">
+                                                            </div>
+                                                            <p class="description">
+                                                                ავტომატიკა
+                                                            </p>
+                                                        </div>
+                                                        <div class="col-12 d_flex">
+                                                            <div class="icon_container">
+                                                                <img src="src/img/s_wheel.svg" alt="hybrid">
+                                                            </div>
+                                                            <p class="description">
+                                                                მარჯვენა
+                                                            </p>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                 <div class="col-7">
-                                    <div class="row">
-                                        <div class="col-6">
-                                            <div class="row">
-                                                <div class="col-12 d_flex">
-                                                    <div class="icon_container">
-                                                        <img src="src/img/hybrid.svg" alt="hybrid">
-                                                    </div>
-                                                     <p class="description">
-                                                        1.8 დატ. ჰიბრიდი
-                                                     </p>
-                                                </div>
-                                                <div class="col-12 d_flex">
-                                                    <div class="icon_container">
-                                                        <img src="src/img/km.svg" alt="hybrid">
-                                                    </div>
-                                                     <p class="description">
-                                                        200 000 კმ
-                                                     </p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-6">
-                                            <div class="row">
-                                                <div class="col-12 d_flex">
-                                                    <div class="icon_container">
-                                                        <img src="src/img/automatic.svg" alt="hybrid">
-                                                    </div>
-                                                     <p class="description">
-                                                        ავტომატიკა
-                                                     </p>
-                                                </div>
-                                                <div class="col-12 d_flex">
-                                                    <div class="icon_container">
-                                                        <img src="src/img/s_wheel.svg" alt="hybrid">
-                                                    </div>
-                                                     <p class="description">
-                                                        მარჯვენა
-                                                     </p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                 </div>
-                                 <div class="col-5 d_flex justify_content_end">
-                                    <h2 class="value">
-                                        69,507
-                                        <span class="gel">
-                                        ₾
-                                        </span>
+                                        <div class="col-5 d_flex justify_content_end">
+                                            <h2 class="value">
+                                                69,507
+                                                <span class="gel">
+                                                    ₾
+                                                </span>
 
-                                    </h2>
-                                 </div>
+                                            </h2>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                     </div>
                     </div>
                 </div>
             </div>
